# Spark

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Editor/: CMakeLists.txt  unity.conf
Editor/src/: EditorRuntime.cpp  EditorRuntime.h  main.cpp
Editor/src/editor/: EditorRuntime.cpp  EditorRuntime.h
Editor/src/editor/startup/: ImportAssets.cpp  StartupManager.h
Editor/src/editor/ui/: AssetBrowserWindow.cpp  AssetBrowserWindow.h  OutlineWindow.cpp  OutlineWindow.h  PropertiesWindow.cpp  PropertiesWindow.h  ViewportWindow.cpp  ViewportWindow.h
Editor/src/editor/util/: ViewportUtil.cpp  ViewportUtil.h
Editor/src/startup/: ImportAssets.cpp  ImportAssets.h  StartupManager.cpp  StartupTask.cpp  StartupTask.h
Editor/src/ui/: OutlineWindow.cpp  OutlineWindow.h  PropertiesWindow.cpp  PropertiesWindow.h  ToolWindow.cpp  ToolWindow.h  ViewportWindow.h
Editor/src/ui/properties/: BoolEditor.cpp  BoolEditor.h  FloatEditor.cpp  FloatEditor.h  IntEditor.cpp  IntEditor.h  PropertyEditor.cpp  PropertyEditor.h  Vec3Editor.cpp  Vec3Editor.h  Vector3Editor.cpp  Vector3Editor.h
Engine/: CMakeLists.txt  unity.conf
Engine/builtin_assets/: diffuse_texture.ssl  point_light.slsl  point_light.ssl  shader.frag  shader.vert  uber_vertex.ssl
Engine/builtin_assets/shaders/: diffuse_texture.ssl  flat_color.ssl  point_light.ssl  text.ssl  ui.ssl
Engine/builtin_assets/textures/: default_button_hovered.tga  default_folder.tga  tree_node_indicator_expanded.tga
Engine/engine_assets/shaders/: alpha_texture.ssl  diffuse_texture.ssl  flat_color.ssl  framebuffer_texture.ssl  point_light.ssl  text.ssl  uber_vertex.ssl
Engine/engine_assets/textures/: default_button_pressed.tga  default_file.tga  tree_node_indicator_collapsed.tga
Engine/src/: spark.h
Engine/src/engine/: Application.cpp  Application.h
Engine/src/engine/asset/: Asset.cpp  Asset.h  AssetBase.cpp  AssetBase.h  AssetManager.cpp  AssetManager.h
Engine/src/engine/bits/: FlagUtil.h  PackUtil.cpp  PackUtil.h  PowerOfTwo.h
Engine/src/engine/camera/: ActiveCameraComponent.cpp  ActiveCameraComponent.h
Engine/src/engine/container_util/: MapUtil.cpp  MapUtil.h  RangeUtil.cpp  RangeUtil.h
Engine/src/engine/debug/: Log.h
Engine/src/engine/ecs/: Action.h  Archetype.h  Component.h  ComponentList.cpp  Observer.cpp  Observer.h  Relationship.cpp  Relationship.h  RelationshipComponent.h  Signal.cpp  Signal.h  SignalActionBuilder.h  System.cpp  System.h  SystemCreationInfo.cpp  SystemCreationInfo.h  SystemDeclaration.cpp  SystemDeclaration.h  SystemUpdateData.h  UpdateMode.cpp  UpdateMode.h  World.cpp  World.h  ecs_fwd.cpp  ecs_fwd.h
Engine/src/engine/input/: InputComponent.cpp  InputComponent.h  InputSystem.cpp  InputSystem.h  InputUtil.cpp  InputUtil.h  Key.cpp  Key.h  KeyEvent.cpp  KeyEvent.h  KeyState.cpp  KeyState.h  MouseButton.cpp  MouseButton.h  MouseEvent.cpp  MouseEvent.h
Engine/src/engine/io/: FileSystem.cpp  FileSystem.h  OutputFileStream.cpp  VFS.cpp  VFS.h
Engine/src/engine/math/: IntVec2.cpp  IntVec2.h  Mat3.cpp  Mat3.h  Mat4.cpp  Mat4.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h  math.cpp  math.h
Engine/src/engine/memory/: Arena.cpp  Arena.h  ArenaAllocator.h  BinaryBlob.cpp  BinaryBlob.h
Engine/src/engine/profiling/: Profiler.cpp  Profiler.h
Engine/src/engine/reflect/: Class.cpp  Class.h  Containers.cpp  Containers.h  Enum.cpp  Enum.h  Object.cpp  Object.h  Primitives.cpp  Reflect.cpp  Reflect.h  Reflect_fwd.h  TemplatedClass.h  Type.h  TypeResolver.h  Util.h
Engine/src/engine/render/: FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.h  LightSetup.h  Material.cpp  Material.h  MaterialInstance.cpp  MaterialInstance.h  PointLight.cpp  PointLight.h  RenderCommand.cpp  RenderCommand.h  RenderGroup.h  RenderState.cpp  RenderState.h  Renderer.cpp  Renderer.h  TextureResource.cpp  TextureResource.h  UniformStorage.cpp  UniformStorage.h  VertexBuffer.cpp  VertexBuffer.h
Engine/src/engine/shader/: ShaderGenerator.cpp  ShaderGenerator.h  ShaderStage.h
Engine/src/engine/string/: ArenaString.cpp  ArenaString.h  String.cpp  String.h
Engine/src/engine/threads/: ParallelForEach.cpp  ParallelForEach.h  SpinLock.cpp  SpinLock.h  SpinLockGuard.h
Engine/src/engine/ui/: Anchors.cpp  Anchors.h  DesiredSizeCalculator.cpp  DesiredSizeCalculator.h  FloatRect.cpp  FloatRect.h  Rect.cpp  Rect.h
Engine/src/platform/: IRunLoop.cpp  IRunLoop.h  IWindow.cpp  IWindow.h  PlatformRunLoop.cpp  PlatformRunLoop.h
Engine/src/platform/linux/: KeyMap.cpp  KeyMap.h  Window.h  (+3 more)
engine/: CMakeLists.txt  unity.conf
engine/engine_assets/materials/: M_BillboardPointlight.json  M_DefaultBillboard.json  M_DefaultLitNoTexture.json  M_DefaultUnlitNoTexture.json  M_DirLightGuide.json  M_Line.json  editable_text_selection.json  editor_asset_browser_bg.json  editor_collapsing_header_title.json  editor_containerbg.json  editor_context_menu.json  editor_darkbg.json  editor_lightbg.json  editor_plane.json  editor_runtime_flat_color.json  editor_scroll_bar.json  editor_splitview_slider.json  editor_window_bg.json  gizmo.json  rotation_gizmo_x.json  rotation_gizmo_y.json  rotation_gizmo_z.json  text.json  text_bitmap.json  text_sdf.json  ui_alpha_texture.json
engine/engine_assets/models/: dir_light_guide.fbx  plane.fbx  translate_handle.fbx
engine/engine_assets/shaders/: billboard.ssl  editor_plane_fragment.ssl  editor_plane_vertex.ssl  flat_color.ssl  framebuffer_texture.ssl  lighting.ssl  line_frag.ssl  line_vert.ssl  point_light.ssl  rotation_gizmo_x.ssl  rotation_gizmo_y.ssl  rotation_gizmo_z.ssl  runtime_flat_color.ssl  runtime_hue.ssl  simple_vertex.ssl  text.ssl  text_bitmap.ssl  text_sdf.ssl  uber_vertex.ssl  ui.ssl
engine/engine_assets/textures/: default_button.tga  editor_button_hovered.png-autosave.kra  editor_play_pause_bg.kra  editor_play_pause_bg.kra-autosave.kra  editor_play_pause_bg.png-autosave.kra  editor_stop.png-autosave.kra  no_file.tga
engine/src/: spark.h
engine/src/engine/: Application.cpp  Application.h
engine/src/platform/: IWindow.cpp  IWindow.h  MouseCursorUtil.h  PlatformRunLoop.cpp  PlatformRunLoop.h
(+1227 files in other folders)
